# newStockBot

./: README.md
HoohacksFinal2/: main.py  pyproject.toml
HoohacksFinal2/hist/: AAPL.csv  CCIV.csv  GME.csv  IBM.csv  SNBR.csv  SPY.csv  TMUS.csv  Tsla .csv  cof.csv
HoohacksFinal2/stockAnalysis/: __init__.py  dataCollection.py  models.py  routes.py
HoohacksFinal2/stockAnalysis/static/: main.css
HoohacksFinal2/stockAnalysis/templates/: default.html  results.html
