[tool.poetry]
name = "vthacks8"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.3"
pandas = "^1.2.2"
Flask = "^1.1.2"
sklearn = "^0.0"
numpy = "^1.19.5"
yfinance = "^0.1.55"
matplotlib = "^3.3.4"
scikit-learn = "^0.24.1"
keras = "^2.4.3"
pandas-datareader = "^0.9.0"
bs4 = "^0.0.1"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
